--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <meta property="og:title" content="comiCSS" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://comicss.com" />
-    <meta property="og:image" content="http://comicss.com/images/thumb.jpg" />
+    <meta property="og:url" content="http://comicss.art" />
+    <meta property="og:image" content="http://comicss.art/images/thumb.jpg" />
     <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="http://www.textivities.com/">
     <meta name="twitter:title" content="comiCSS">
     <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="http://comicss.com/images/thumb.jpg">
+    <meta name="twitter:image" content="http://comicss.art/images/thumb.jpg">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
@@ -165,9 +165,9 @@
         </a>
       </nav>
 
-      <p>Permanent link to this comic: <a id="permanent-link" href="https://comicss.com/?id=1">https://comicss.com/?id=1</a></p>
-      <p>Image URL (for hot-linking): <a id="image-link" href="https://comicss.com/comics/1/flexing.png">https://comicss.com/comics/1/flexing.png</a></p>
-      <p>Code URL (to view CSS source): <a id="code-link" href="https://comicss.com/comics/1/flexing.html" rel="alternate">https://comicss.com/comics/1/flexing.html</a></p>
+      <p>Permanent link to this comic: <a id="permanent-link" href="https://comicss.art/?id=1">https://comicss.art/?id=1</a></p>
+      <p>Image URL (for hot-linking): <a id="image-link" href="https://comicss.art/comics/1/flexing.png">https://comicss.art/comics/1/flexing.png</a></p>
+      <p>Code URL (to view CSS source): <a id="code-link" href="https://comicss.art/comics/1/flexing.html" rel="alternate">https://comicss.art/comics/1/flexing.html</a></p>
     </main>
     <footer>
       Copyright &copy; 2021-2022. <a href="https://alvaromontoro.com" rel="author external">Alvaro Montoro</a>
