--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://comicss.art" />
     <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
     <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="http://www.textivities.com/">
     <meta name="twitter:title" content="comiCSS">
     <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
