--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
     <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://www.textivities.com/">
+    <meta name="twitter:url" content="http://comicss.art/">
     <meta name="twitter:title" content="comiCSS">
     <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
     <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
