--- a/comics/9/accessory.html
+++ b/comics/9/accessory.html
@@ -404,7 +404,8 @@ input:checked ~ .comic-strip .card {
   font-size: 3vmin;
   text-align: center;
   border-radius: 100% / 0 0 50% 50%;
-  filter: drop-shadow(0.5vmin 0) drop-shadow(0 0.5vmin) drop-shadow(-0.25vmin 0)
+  box-shadow: 0vmin 0.5vmin #000;
+  /* filter: drop-shadow(0.25vmin 0) drop-shadow(0 0.25vmin) drop-shadow(-0.25vmin 0) */
 }
 
 .bubble::before {
@@ -416,6 +417,7 @@ input:checked ~ .comic-strip .card {
   left: 0;
   left: 5%;
   border-radius: 0 5% 20% / 100%;
+  box-shadow: 0.5vmin -0.5vmin #000;
 }
 
 .bubble-line {
@@ -440,6 +442,15 @@ input:checked ~ .comic-strip .card {
 
 .back .bubble span {
   transform: scaleX(-1)
+}
+
+.back .bubble-line {
+  top: 35%;
+  left: 45%;
+}
+
+.back .bubble-line ~ .bubble-line {
+  left: 44%;
 }
 
 .bubble span code {
