--- a/comics/3/lioncorn.html
+++ b/comics/3/lioncorn.html
@@ -25,8 +25,14 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
-
+@font-face {
+  font-family: 'Comic Neue';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(/fonts/comic.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 
 .canvas {
@@ -393,13 +399,14 @@
 }
 
 .bubble .text {
-  font-family: 'Carter One', fantasy, serif;
+  font-family: 'Comic Neue', fantasy, serif;
+  font-weight: bold;
   position: absolute;
   width: 100%;
   height: 100%;
   display: grid;
   place-items: center;
-  font-size: 4vmin;
+  font-size: 5vmin;
   text-align: center;
 }
 
