--- a/comics/12/pikachu.html
+++ b/comics/12/pikachu.html
@@ -25,6 +25,10 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
+body {
+  overflow: hidden;
+}
+
 #desc {
   position: absolute;
   width: 0;
