Add youtube link to scroll snap

--- a/comics/13/scroll-snap.html
+++ b/comics/13/scroll-snap.html
@@ -668,6 +668,61 @@ h1 a:visited {
   left: -102%;
   border-top: 1px solid;
 }
+
+
+/***/
+
+#youtube {
+  z-index: 2;
+  display: block;
+  width: 100px;
+  height: 70px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background: red;
+  border-radius: 50% / 11%;
+  transition: transform 0.5s;
+}
+
+#youtube:hover,
+#youtube:focus {
+  transform: scale(1.1);
+}
+
+#youtube::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 7.5%;
+  left: -6%;
+  width: 112%;
+  height: 85%;
+  background: red;
+  border-radius: 9% / 50%;
+}
+
+#youtube::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: 40px;
+  width: 45px;
+  height: 30px;
+  border: 15px solid transparent;
+  box-sizing: border-box;
+  border-left: 30px solid white;
+}
+
+#youtube span {
+  font-size: 0;
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+
     </style>
   </head>
   <body>
@@ -820,5 +875,9 @@ h1 a:visited {
         <div class="mini-text">...stop the finger snapping, #%$&@!</div>
       </div>
     </div>
+
+    <a id="youtube" href="https://www.youtube.com/watch?v=vLVBlxXD2dw" target="_blank">
+      <span>See how this demo was coded</span>
+    </a>
   </body>
   </html>
