--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
       <p>Permanent link to this comic: <a id="permanent-link" href="https://comicss.art/?id=1">https://comicss.art/?id=1</a></p>
       <p>Image URL (for hot-linking): <a id="image-link" href="https://comicss.art/comics/1/flexing.png">https://comicss.art/comics/1/flexing.png</a></p>
       <p>Code URL (to view CSS source): <a id="code-link" href="https://comicss.art/comics/1/flexing.html" rel="alternate">https://comicss.art/comics/1/flexing.html</a></p>
+
+      <hr />
+      <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
+      <p>You are free to copy and share these comics, but not to sell them. <a href="/license">More details</a>.</p>
+      <hr />
     </main>
     <footer>
       Copyright &copy; 2021-2022. <a href="https://alvaromontoro.com" rel="author external">Alvaro Montoro</a>
