--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </svg>
           <span>Next</span>
         </a>
-        <a href="#">
+        <a href="/">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M90,0 90,100 M0,0 50,50 0,100" />
           </svg>
@@ -157,7 +157,7 @@
           </svg>
           <span>Next</span>
         </a>
-        <a href="#">
+        <a href="/">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M90,0 90,100 M0,0 50,50 0,100" />
           </svg>
@@ -165,6 +165,7 @@
         </a>
       </nav>
 
+      <p class="video"><a href="">Watch how this comic was coded!</a></p>
       <p>Permanent link to this comic: <a id="permanent-link" href="https://comicss.art/?id=1">https://comicss.art/?id=1</a></p>
       <p>Image URL (for hot-linking): <a id="image-link" href="https://comicss.art/comics/1/flexing.png">https://comicss.art/comics/1/flexing.png</a></p>
       <p>Code URL (to view CSS source): <a id="code-link" href="https://comicss.art/comics/1/flexing.html" rel="alternate">https://comicss.art/comics/1/flexing.html</a></p>
@@ -181,7 +182,7 @@
     </footer>
 
     
-    <script src="/js/data.js?last-updated=2022-02-25"></script>
+    <script src="/js/data.js?last-updated=2022-02-28"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
