Add link from demo to home

--- a/comics/1/flexing.html
+++ b/comics/1/flexing.html
@@ -104,5 +104,7 @@
         </svg>
       </div>
     </div>
+
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
