--- a/comics/11/superherocss.html
+++ b/comics/11/superherocss.html
@@ -194,5 +194,7 @@ code {
       </section>
     </article>
     </main>   
+
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
