--- a/comics/12/pikachu.html
+++ b/comics/12/pikachu.html
@@ -353,6 +353,8 @@ html, body {
       <div class="nose r b"></div>
       <div class="eye eye-1 ha r b"></div>
       <div class="eye eye-2 ha r b"></div>
-    </div>  
+    </div>
+
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
