--- a/comics/13/scroll-snap.html
+++ b/comics/13/scroll-snap.html
@@ -879,5 +879,7 @@ h1 a:visited {
     <a id="youtube" href="https://www.youtube.com/watch?v=vLVBlxXD2dw" target="_blank">
       <span>See how this demo was coded</span>
     </a>
+
+    <a href="/" style="position: fixed; bottom: 1rem; left: 1rem;">See more comics</a>
   </body>
   </html>
