--- a/comics/15/democracy.html
+++ b/comics/15/democracy.html
@@ -526,5 +526,7 @@ body {
     <a id="youtube" href="https://www.youtube.com/watch?v=icKWKEcsAIE" target="_blank">
       <span>See how this was coded</span>
     </a>
+
+    <a href="/" style="position: fixed; bottom: 1rem; left: 1rem;">See more comics</a>
   </body>
   </html>
