--- a/comics/16/fastest.html
+++ b/comics/16/fastest.html
@@ -986,5 +986,6 @@ border-radius: 50%;
         </div>
       </div>
     </article>
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
