--- a/comics/17/debate.html
+++ b/comics/17/debate.html
@@ -493,5 +493,7 @@ article .narrator {
         <div class="table"></div>
       </div>
     </article>
+
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
