--- a/comics/2/word-breaking.html
+++ b/comics/2/word-breaking.html
@@ -72,5 +72,6 @@ svg {
         </g>
       </svg>
     </div>
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
