--- a/comics/4/unilion.html
+++ b/comics/4/unilion.html
@@ -545,5 +545,7 @@
     <a id="youtube" href="https://www.youtube.com/watch?v=3MIMN8fUPUU" target="_blank">
       <span>See how this demo was coded</span>
     </a>
+
+    <a href="/" style="position: fixed; bottom: 1rem; left: 1rem;">See more comics</a>
   </body>
   </html>
