--- a/comics/5/barbershop.html
+++ b/comics/5/barbershop.html
@@ -589,5 +589,7 @@ body {
         </div>
       </div>
     </div>
+
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
