--- a/comics/7/texas-freeze-ii.html
+++ b/comics/7/texas-freeze-ii.html
@@ -536,5 +536,7 @@ left: 53%;
         </div>
       </div>
     </article>
+
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
