--- a/comics/9/accessory.html
+++ b/comics/9/accessory.html
@@ -678,5 +678,7 @@ input:checked ~ .comic-strip .knife {
         </div>
       </div>
     </div>
+
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
