--- a/comics/base.html
+++ b/comics/base.html
@@ -29,6 +29,6 @@
     </style>
   </head>
   <body>
-    
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
   </body>
   </html>
