--- a/comics/10/impossible-love.html
+++ b/comics/10/impossible-love.html
@@ -246,5 +246,7 @@ body {
     <a id="youtube" href="https://www.youtube.com/watch?v=0FxH1GdRLWs" target="_blank">
       <span>See how this demo was coded</span>
     </a>
+
+    <a href="/" style="position: fixed; bottom: 1rem; left: 1rem;">See more comics</a>
   </body>
   </html>
