--- a/comics/14/accent-color.html
+++ b/comics/14/accent-color.html
@@ -711,5 +711,7 @@
     <a id="youtube" href="https://www.youtube.com/watch?v=i_B6LI2fq2Y" target="_blank">
       <span>See how this was coded</span>
     </a>
+
+    <a href="/" style="position: fixed; bottom: 1rem; left: 1rem;">See more comics</a>
   </body>
   </html>
