--- a/comics/28/cross-stitch.html
+++ b/comics/28/cross-stitch.html
@@ -31,7 +31,6 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-
 body {
   perspective: 1000px;
   margin: 0;
@@ -255,7 +254,7 @@ label {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-48.5vmin, -30vmin);
+  transform: translate(-48.5vmin, -30vmin) rotateY(0deg);
   line-height: 2vmin;
   font-family: Helvetica, Arial, sans-serif;
   background: #def8;
@@ -265,6 +264,11 @@ label {
   border-radius: 0.5vmin;
   cursor: pointer;
   font-size: 2vmin;
+  transition: transform 0.5s;
+}
+
+input:checked + label {
+  transform: translate(-48.5vmin, -30vmin) rotateY(360deg);
 }
     </style>
   </head>
