--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>Flexing</h1>
+      <h1>Integrate</h1>
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=7" rel="prev">
+        <a href="/?id=33" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -126,8 +126,8 @@
         </a>
       </nav>
 
-      <article id="comic-strip" role="img">
-        <img src="/comics/1/1-flexing-0.webp" alt="" /><img src="/comics/1/1-flexing-1.webp" alt="" />
+      <article id="comic-strip" role="img" class="vertical">
+        <img src="/comics/34/34-integrate-0.webp" alt="" />
       </article>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +137,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=7" rel="prev">
+        <a href="/?id=33" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -166,9 +166,9 @@
       </nav>
 
       <p class="video"><a href="">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a id="permanent-link" href="https://comicss.art/?id=1">https://comicss.art/?id=1</a></p>
-      <p>Image URL (for hot-linking): <a id="image-link" href="https://comicss.art/comics/1/flexing.png">https://comicss.art/comics/1/flexing.png</a></p>
-      <p>Code URL (to view CSS source): <a id="code-link" href="https://comicss.art/comics/1/flexing.html" rel="alternate">https://comicss.art/comics/1/flexing.html</a></p>
+      <p>Permanent link to this comic: <a id="permanent-link" href="https://comicss.art/?id=34">https://comicss.art/?id=34</a></p>
+      <p>Image URL (for hot-linking): <a id="image-link" href="https://comicss.art/comics/34/integrate.png">https://comicss.art/comics/34/integrate.png</a></p>
+      <p>Code URL (to view CSS source): <a id="code-link" href="https://comicss.art/comics/34/integrate.html" rel="alternate">https://comicss.art/comics/34/integrate.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -182,7 +182,7 @@
     </footer>
 
     
-    <script src="/js/data.js?last-updated=2022-05-16"></script>
+    <script src="/js/data.js?last-updated=2022-05-19"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
