--- a/contact/index.html
+++ b/contact/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Alvaro Montoro (alvaromontoro@gmail.com)" />
-    <meta name="keywords" content="comicss,webcomic,css,alvaro montoro,alvaro,montoro,contact" />
-    <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta name="keywords" content="comicss,webcomic,css,contact,about,twitter,alvaro_montoro,alvaro montoro,alvaro,montoro,contact" />
+    <meta name="description" content="Contact information for comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
     <title>comiCSS - Contact</title>
@@ -15,11 +15,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://comicss.art" />
     <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:description" content="Contact information for comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="http://comicss.art/">
     <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
+    <meta name="twitter:description" content="Contact information for comiCSS: A webcomic about CSS. Coded in CSS.">
     <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
