--- a/comics/41/the-death-of-ie.html
+++ b/comics/41/the-death-of-ie.html
@@ -63,6 +63,10 @@ section {
   box-sizing: border-box;
 }
 
+.box br {
+  position: unset;
+}
+
 .box-all {
   flex: 1;
 }
@@ -1693,7 +1697,8 @@ box-shadow: inset -0.5vmin 0.5vmin #def;
 .box-14b .bubble-2::before,
 .box-14b .bubble-3::before{
   content: "";
-  left: -5%;
+  box-sizing: content-box;
+  left: -40%;
   border: 2vmin solid #0000;
   border-bottom: 0.75vmin solid #ffc;
   border-left: 0 solid #0000;
@@ -1701,7 +1706,8 @@ box-shadow: inset -0.5vmin 0.5vmin #def;
   width: 70%;
   height: 150%;
   transform: rotate(-65deg);
-  top: 10%;
+  top: -20%;
+  clip-path: polygon(0% 50%, 100% 35%, 100% 100%, 0% 100%)
 }
 
 
@@ -1728,10 +1734,10 @@ box-shadow: inset -0.5vmin 0.5vmin #def;
 
 .box-14b .bubble-2::before{
   left: auto;
-  top: 20%;
-  right: 40%;
+  top: 0%;
+  right: 10%;
   width: 250%;
-  transform: rotate(-15deg);
+  transform: rotate(-20deg);
 }
 
 .box-15::before {
