--- a/comics/41/the-death-of-ie.html
+++ b/comics/41/the-death-of-ie.html
@@ -2305,7 +2305,7 @@ border-radius: 50%;
     </style>
   </head>
   <body>
-    <article>
+    <article role="img" aria-label="Cartoon page divided in 3 sections with multiple panels each. In the first section, IE is dead and the rest of the browsers get together to honor it. In the second section, two suited men (Big and Corp) visit the necromancer asking to bring IE back to life because it's their favorite way of torturing employees. In the last section, IE is back as a ghost, the other browsers run scared to IE despair, and the ghost of the Flash logo tries to cheer IE up... to be continued?">
       <section>
         <div class="box box-1 box-40">
           <div class="banner">Browsertown. June 15, 2022.</div>
