--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>Integrate</h1>
+      <h1>Anchor</h1>
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -127,7 +127,7 @@
       </nav>
 
       <article id="comic-strip" role="img" class="vertical">
-        <img src="/comics/42/42-moses-flexing-the-read-sea-0.webp" alt="" />
+        <img src="/comics/53/53-anchor-0.webp" alt="Why did the web developer struggle to style the link? Because anchors don't float" />
       </article>
 
       <nav aria-label="Comic strip browsing">
@@ -181,7 +181,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2022-08-30"></script>
+    <script src="/js/data.js?last-updated=2022-09-01"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
