--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=53" rel="prev">
+        <a href="/?id=54" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -127,7 +127,7 @@
       </nav>
 
       <article id="comic-strip" role="img" class="vertical">
-        <img src="/comics/54/54-interwebs-0.webp" alt="Cartoon with a group of spiders hanging from a spider web. The ones at the extremes move like in a Newton's cradle, and one in the middle says 'To be honest, I dont know what people find so great about the interwebs.'" />
+        <img src="/comics/55/55-yellow-snow-0.webp" alt="Cartoon of a yeti saying 'Trust an expert: never eat #ff0 snow!'" />
       </article>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +137,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=53" rel="prev">
+        <a href="/?id=54" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -181,7 +181,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2022-09-06"></script>
+    <script src="/js/data.js?last-updated=2022-09-12"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
