--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=55" rel="prev">
+        <a href="/?id=57" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=5">
+        <a class="random-post" href="/?id=13">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -127,7 +127,7 @@
       </nav>
 
       <article id="comic-strip" role="img" class="vertical">
-        <img src="/comics/56/56-jaws-0.webp" alt="Cartoon parodying the Jaws poster, with a shark threatening a swimmer (in this case a laptop on a floatie) with the text FLEX" />
+        <img src="/comics/58/58-pomodorito-0.webp" alt="Cartoon comparing the pomodoro technique (25 minutes working, 5 minute break, repeat 4 times, then take longer break) and the Pomodorito technique (25 minutes eating doritos, 5 minutes work, repeat 4 times, then take a longer break to go buy more doritos" />
       </article>
 
       <nav aria-label="Comic strip browsing">
@@ -137,13 +137,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=55" rel="prev">
+        <a href="/?id=57" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=5">
+        <a class="random-post" href="/?id=25">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -181,7 +181,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2022-09-26"></script>
+    <script src="/js/data.js?last-updated=2022-10-03"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
