--- a/about/index.html
+++ b/about/index.html
@@ -29,20 +29,15 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body class="about">
+    <a href="#main" class="skip-link">Skip to main content</a>
+    
     <header>
       <div>
-        <h2 class="page-title">comi<span>c</span><span>ss</span></h2>
+        <h2 class="page-title"><a href="/">comi<span>c</span><span>ss</span></a></h2>
         <p>A webcomic about CSS. Coded in CSS.</p>
       </div>
       <nav aria-label="primary">
         <ul>
-          <li>
-            <a href="/">
-              <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
-                <path d="M20,40 20,95 80,95 80,40 M0,55 50,5 100,55" />
-              </svg><span>Home</span>
-            </a>
-          </li>
           <li>
             <a href="/archive/">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
@@ -67,6 +62,20 @@
             </a>
           </li>
           <li>
+            <a href="/contact/">
+              <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
+                <path d="M95,15 95,85 5,85 5,15 95,15 50,55 5,15Z" />
+              </svg><span>Contact</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/comi_CSS">
+              <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
+                <path d="M95,15 95,75 55,75 35,95 35,75 5,75 5,15Z" stroke-linejoin="round" />
+              </svg><span>Twitter</span>
+            </a>
+          </li>
+          <li>
             <a href="https://www.patreon.com/alvaromontoro" rel="external">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
                 <path d="M9,0 9,100" style="stroke-width:18" />
@@ -74,19 +83,11 @@
               </svg><span>Patreon</span>
             </a>
           </li>
-          <li>
-            <a href="/contact/">
-              <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
-                <path d="M95,15 95,85 5,85 5,15 95,15 50,55 5,15Z" />
-              </svg><span>Contact</span>
-            </a>
-          </li>
         </ul>
       </nav>
     </header>
 
     <main id="main">
-      <a href="#main" class="skip-link">Skip to main content</a>
       <h1>About</h1>
       <p>
         <span class="sitename">comi<span>CSS</span></span> is a webcomic created, designed, and coded by 
