--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=57" rel="prev">
+        <a href="/?id=58" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -127,7 +127,7 @@
       </nav>
 
       <article id="comic-strip" role="img" class="vertical">
-        <img src="/comics/58/58-pomodorito-0.webp" alt="Cartoon comparing the pomodoro technique (25 minutes working, 5 minute break, repeat 4 times, then take longer break) and the Pomodorito technique (25 minutes eating doritos, 5 minutes work, repeat 4 times, then take a longer break to go buy more doritos" />
+        <img src="/comics/59/59-they-never-knew.png" alt="Cartoon with two panels, a UX Designer and a Developer meets at a tech conference and they immediately click. They decide to meet at the UID cafe, but one ends up in the User Interface Design Cafe, and the other at the Unique IDentifier Cafe. They never knew what went wrong." />
       </article>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +137,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=57" rel="prev">
+        <a href="/?id=58" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -181,7 +181,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2022-10-03"></script>
+    <script src="/js/data.js?last-updated=2022-10-10"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
