new comic: hobbits and web

--- a/comics/59/they-never-knew.html
+++ b/comics/59/they-never-knew.html
@@ -661,7 +661,7 @@ p {
     </style>
   </head>
   <body>
-    <article role="img" aria-label="cartoon in two parts. In the first one there are two people looking at each other smiling. One has a name tag that says UX, and the other one has a name tag with the name DEV. The panel text reads 'The met at a tech conference, and they immediately clicked. They agreed to meet at the UID cafe the following day'. The second panel shows the same people with sad looks. They are in different cafes, one is named User Interface Design, and the other is Unique Identifier. The panel text reads 'The never figured out what went wrong.'">
+    <article role="img" aria-label="Cartoon in two parts. In the first one, two people look at each other, smiling. One has a name tag that says UX, and the other has a name tag with the name DEV. The panel text reads, 'They met at a tech conference and immediately clicked. They agreed to meet at the UID cafe the following day.' The second panel shows the same people with sad looks. They are in different cafes, one is named User Interface Design Cafe, and the other is called Unique Identifier Cafe. The panel text reads, 'They never figured out what went wrong.'">
       <section class="section-1">
         <p>They met at a tech conference, and they immediately clicked...</p>
         <div class="person-1">
