--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=58" rel="prev">
+        <a href="/?id=64" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=13">
+        <a class="random-post" href="/?id=27">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -127,7 +127,7 @@
       </nav>
 
       <article id="comic-strip" role="img" class="vertical">
-        <img src="/comics/59/59-they-never-knew.png" alt="Cartoon with two panels, a UX Designer and a Developer meets at a tech conference and they immediately click. They decide to meet at the UID cafe, but one ends up in the User Interface Design Cafe, and the other at the Unique IDentifier Cafe. They never knew what went wrong." />
+        <img src="/comics/65/65-image-decision-tree-0.webp" alt="A decision tree to pick the best file format for your project. Most of the options have been scratched and the only that remains is a handwritten question: 'Is it a cat video?' if yes, GIF; if not, PNG if you need transparency or JPG if you don't. Ignore the rest of formats." />
       </article>
 
       <nav aria-label="Comic strip browsing">
@@ -137,13 +137,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=58" rel="prev">
+        <a href="/?id=64" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=25">
+        <a class="random-post" href="/?id=45">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -181,7 +181,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2022-11-14"></script>
+    <script src="/js/data.js?last-updated=2022-11-21"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
