--- a/comics/base.html
+++ b/comics/base.html
@@ -25,10 +25,17 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
+      @font-face {
+        font-family: 'Comic Neue';
+        src: url(/fonts/comic.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
 
+      
     </style>
   </head>
   <body>
-    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;">See more comics</a>
+
+    <a href="/" style="position: fixed; bottom: 1rem; right: 1rem;" rel="up">See more comics</a>
   </body>
   </html>
