Add rel and aria-label

--- a/about/index.html
+++ b/about/index.html
@@ -33,13 +33,13 @@
     
     <header>
       <div>
-        <h2 class="page-title"><a href="/">comi<span>c</span><span>ss</span></a></h2>
+        <h2 class="page-title"><a href="/" rel="up">comi<span>c</span><span>ss</span></a></h2>
         <p>A webcomic about CSS. Coded in CSS.</p>
       </div>
       <nav aria-label="primary">
         <ul>
           <li>
-            <a href="/archive/">
+            <a href="/archive/" rel="archives">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
                 <path d="M12,30 5,30 5,5 95,5 95,30 88,30 88,95 12,95 12,30 88,30" />
                 <rect rx="3" ry="3" x="30" width="40" y="45" height="15" />
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li>
-            <a href="/about/" aria-current="page">
+            <a href="/about/" rel="about" aria-current="page">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
                 <path d="M50,40 C85,60 95,80 95,95 95,95 5,95 5,95 5,80 15,60 50,40Z" />
                 <circle cx="50" cy="30" r="25" style="fill:#fff" />
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.patreon.com/alvaromontoro" rel="external">
+            <a href="https://www.patreon.com/alvaromontoro" rel="external payment">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
                 <path d="M9,0 9,100" style="stroke-width:18" />
                 <circle cx="62" cy="38" r="38" style="fill:currentColor; stroke-width: 0" />
