--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <a href="#main" class="skip-link">Skip to main content</a>
     <header>
       <div>
-        <h2 class="page-title"><a href="/" aria-current="page">comi<span>c</span><span>ss</span></a></h2>
+        <h2 class="page-title"><a href="/" rel="self" aria-current="page">comi<span>c</span><span>ss</span></a></h2>
         <p>A webcomic about CSS. Coded in CSS.</p>
       </div>
       <nav aria-label="primary">
         <ul>
           <li>
-            <a href="/archive/">
+            <a href="/archive/" rel="archives">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
                 <path d="M12,30 5,30 5,5 95,5 95,30 88,30 88,95 12,95 12,30 88,30" />
                 <rect rx="3" ry="3" x="30" width="40" y="45" height="15" />
@@ -53,7 +53,7 @@
             </a>
           </li>
           <li>
-            <a href="/about/">
+            <a href="/about/" rel="about">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
                 <path d="M50,40 C85,60 95,80 95,95 95,95 5,95 5,95 5,80 15,60 50,40Z" />
                 <circle cx="50" cy="30" r="25" style="fill:#fff" />
@@ -68,14 +68,14 @@
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/comi_CSS" rel="external">
+            <a href="https://twitter.com/comi_CSS" rel="external author">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
                 <path d="M95,15 95,75 55,75 35,95 35,75 5,75 5,15Z" stroke-linejoin="round" />
               </svg><span>Twitter</span>
             </a>
           </li>
           <li>
-            <a href="https://www.patreon.com/alvaromontoro" rel="external">
+            <a href="https://www.patreon.com/alvaromontoro" rel="external payment">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
                 <path d="M9,0 9,100" style="stroke-width:18" />
                 <circle cx="62" cy="38" r="38" style="fill:currentColor; stroke-width: 0" />
@@ -92,7 +92,7 @@
       </noscript>
       <h1>Anchor</h1>
       <nav aria-label="Comic strip browsing">
-        <a href="/?id=1">
+        <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M10,0 10,100 M100,0 50,50 100,100" />
           </svg>
@@ -118,7 +118,7 @@
           </svg>
           <span>Next</span>
         </a>
-        <a href="/">
+        <a href="/" rel="last">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M90,0 90,100 M0,0 50,50 0,100" />
           </svg>
@@ -131,7 +131,7 @@
       </article>
 
       <nav aria-label="Comic strip browsing">
-        <a href="/?id=1">
+        <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M10,0 10,100 M100,0 50,50 100,100" />
           </svg>
@@ -157,7 +157,7 @@
           </svg>
           <span>Next</span>
         </a>
-        <a href="/">
+        <a href="/" rel="last">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M90,0 90,100 M0,0 50,50 0,100" />
           </svg>
@@ -165,14 +165,14 @@
         </a>
       </nav>
 
-      <p class="video"><a href="">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a id="permanent-link" href="https://comicss.art/?id=34">https://comicss.art/?id=34</a></p>
-      <p>Image URL (for hot-linking): <a id="image-link" href="https://comicss.art/comics/34/integrate.png">https://comicss.art/comics/34/integrate.png</a></p>
-      <p>Code URL (to view CSS source): <a id="code-link" href="https://comicss.art/comics/34/integrate.html" rel="alternate">https://comicss.art/comics/34/integrate.html</a></p>
+      <p class="video"><a href="" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=34">https://comicss.art/?id=34</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/34/integrate.png">https://comicss.art/comics/34/integrate.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/34/integrate.html" rel="alternate">https://comicss.art/comics/34/integrate.html</a></p>
 
       <hr />
-      <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
-      <p>You are free to copy and share these comics, but not to sell them. <a href="/license">More details</a>.</p>
+      <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
+      <p>You are free to copy and share these comics, but not to sell them. <a href="/license" rel="license">More details on the license and use rights</a>.</p>
       <hr />
     </main>
     <footer>
