replace article with div

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         </a>
       </nav>
 
-      <article id="comic-strip" role="img" class="vertical">
+      <div id="comic-strip" role="img" class="vertical">
         <img src="/comics/65/65-image-decision-tree-0.webp" alt="A decision tree to pick the best file format for your project. Most of the options have been scratched and the only that remains is a handwritten question: 'Is it a cat video?' if yes, GIF; if not, PNG if you need transparency or JPG if you don't. Ignore the rest of formats." />
-      </article>
+      </div>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
