--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=64" rel="prev">
+        <a href="/?id=67" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip" role="img" class="vertical">
-        <img src="/comics/65/65-image-decision-tree-0.webp" alt="A decision tree to pick the best file format for your project. Most of the options have been scratched and the only that remains is a handwritten question: 'Is it a cat video?' if yes, GIF; if not, PNG if you need transparency or JPG if you don't. Ignore the rest of formats." />
+        <img src="/comics/68/68-keyboard-trap-0.webp" alt="Cartoon showing an animal trap (a box held up with a stick, and keyboard keys as bait). Someone is talking off-panel: 'First: what you created is a keyboard trap, not a focus trap. Second: that is not how it's done. And third: PUT THOSE KEYS BACK IN MY KEYBOARD!!!'" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +137,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=64" rel="prev">
+        <a href="/?id=67" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -181,7 +181,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2022-12-06"></script>
+    <script src="/js/data.js?last-updated=2022-12-12"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
