new navigation at the bottom

--- a/index.html
+++ b/index.html
@@ -175,6 +175,22 @@
       <p>You are free to copy and share these comics, but not to sell them. <a href="/license" rel="license">More details on the license and use rights</a>.</p>
       <hr />
     </main>
+    <nav class="thumbs-nav" aria-label="trending comics">
+      <ul>
+        <li><a href="/?id=2"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-2.webp" alt="" /><span class="a11y-hidden">Comic 2</span></a></li>
+        <li><a href="/?id=6"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-6.webp" alt="" /><span class="a11y-hidden">Comic 6</span></a></li>
+        <li><a href="/?id=16"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-16.webp" alt="" /><span class="a11y-hidden">Comic 16</span></a></li>
+        <li><a href="/?id=23"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-23.webp" alt="" /><span class="a11y-hidden">Comic 23</span></a></li>
+        <li><a href="/?id=29"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-29.webp" alt="" /><span class="a11y-hidden">Comic 29</span></a></li>
+        <li><a href="/?id=32"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-32.webp" alt="" /><span class="a11y-hidden">Comic 32</span></a></li>
+        <li><a href="/?id=39"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-39.webp" alt="" /><span class="a11y-hidden">Comic 39</span></a></li>
+        <li><a href="/?id=50"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-50.webp" alt="" /><span class="a11y-hidden">Comic 50</span></a></li>
+        <li><a href="/?id=51"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-51.webp" alt="" /><span class="a11y-hidden">Comic 51</span></a></li>
+        <li><a href="/?id=59"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-59.webp" alt="" /><span class="a11y-hidden">Comic 59</span></a></li>
+        <li><a href="/?id=67"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-67.webp" alt="" /><span class="a11y-hidden">Comic 67</span></a></li>
+      </ul>
+    </nav>
+    <hr/>
     <footer>
       Copyright &copy; 2021-2022. <a href="https://alvaromontoro.com" rel="author external">Alvaro Montoro</a>
       &mdash; <a href="/atom.xml">Atom Feed</a>
