--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=68" rel="prev">
+        <a href="/?id=69" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip" role="img" class="vertical">
-        <img src="/comics/69/69-a-different-angle-0.webp" alt="When I get lost, I try seeing things from a different angle" />
+        <img src="/comics/70/70-twelfth-day-of-christmas-0.webp" alt="On the twelfth day of Christmas, my CSS sent to me... Twelve image-renderings, Eleven pixels padding, Ten spans a-flexing, Nine letter-spacing, Eight divs with vmin, Seven none font-kernings, Six videos :playing, Five :not() with :is()! Four border-width, Three place-self, Two rules with :has(), And a column in a red grid." />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,7 +137,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=68" rel="prev">
+        <a href="/?id=69" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -197,7 +197,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2022-12-19"></script>
+    <script src="/js/data.js?last-updated=2022-12-24"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
