--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/73/73-wendys-0.webp" alt="A man asks goes in a long rant about how CSS should be considered a drawing language." />
+        <img src="/comics/73/73-wendys-0.webp" alt="A man goes in a long rant about how CSS should be considered a drawing language." />
         <img src="/comics/73/73-wendys-1.webp" alt="A person replies 'Sir... this is a Wendys'" />
       </div>
 
