--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>Anchor</h1>
+      <h1>An Apple A Day...</h1>
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -197,7 +197,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-02-17"></script>
+    <script src="/js/data.js?last-updated=2023-02-22"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
