New cartoon: the eye of sauron

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=76" rel="prev">
+        <a href="/?id=77" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=3">
+        <a class="random-post" href="/?id=23">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -127,7 +127,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/77/77-wrap-battling-0.webp" alt="Cartoon titled 'Wrap Battling' showing two rappers singing/battling about flex-wrap" />
+        <img src="/comics/78/78-the-eye-of-sauron-0.webp" alt="The tower of Mordor with the eye of Sauron speakign: 'I once suggested the eye tag. It would track every visible interaction within the wrapped content, but the HTML group rejected my precious idea... So I created Google instead.'" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -137,13 +137,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=76" rel="prev">
+        <a href="/?id=77" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/?id=13">
+        <a class="random-post" href="/?id=73">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -166,9 +166,9 @@
       </nav>
 
       <p class="video"><a href="" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=77">https://comicss.art/?id=77</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/77/wrap-battling.png">https://comicss.art/comics/77/wrap-battling.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/77/wrap-battling.html" rel="alternate">https://comicss.art/comics/77/wrap-battling.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=78">https://comicss.art/?id=78</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/78/the-eye-of-sauron.png">https://comicss.art/comics/78/the-eye-of-sauron.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/78/the-eye-of-sauron.html" rel="alternate">https://comicss.art/comics/78/the-eye-of-sauron.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -197,7 +197,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-02-27"></script>
+    <script src="/js/data.js?last-updated=2023-03-13"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
