New comic: Ouija

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>Coffee as a CSS Color</h1>
+      <h1>Ouija</h1>
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -107,7 +107,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=86" rel="prev">
+        <a href="/?id=88" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -136,7 +136,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/87/87-coffee-as-a-css-color-0.webp" alt="Cartoon titled 'Coffee Style Sheet' with different types of coffee described as CSS colors. Black coffee is hwb(0 0 100%), Americano is hwb(50% 0 50%), Lungo is hwb(50% 0 50%), cafe au lait is hwb(0 50% 50%), latte is hwb(0 66% 33%), macchiato is hwb(0 33% 66%), cappuccino is hwb(0 66% 33%), espresso is hwb(0 0 33%), and 'Need more coffee!' is hwb(0 0 0)." />
+        <img src="/comics/89/89-ouija-0.webp" alt="Cartoon with two people around an ouija board, they are reading C - E - N - T - E - R" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -146,7 +146,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=86" rel="prev">
+        <a href="/?id=88" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -175,9 +175,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=87">https://comicss.art/?id=87</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/87/coffee-as-a-css-color.png">hhttps://comicss.art/comics/87/coffee-as-a-css-color.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/87/coffee-as-a-css-color.html" rel="alternate">https://comicss.art/comics/87/coffee-as-a-css-color.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=89">https://comicss.art/?id=89</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/89/ouija.png">hhttps://comicss.art/comics/89/ouija.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/89/ouija.html" rel="alternate">https://comicss.art/comics/89/ouija.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
