--- a/comics/93/whales.html
+++ b/comics/93/whales.html
@@ -312,7 +312,7 @@ section:nth-child(even) {
   </head>
   <body>
 
-    <article>
+    <article role="img" aria-label="Cartoon with 6 panels: three whales showing off how they spray water by using different CSS gradients. The last one makes a really complex one and the other whales call him out on it.">
       <section class="panel-1">
         <div class="bubble">Check this out, Bob!</div>
         <div class="whale whale-1"></div>
