--- a/index.html
+++ b/index.html
@@ -211,6 +211,13 @@
       Copyright &copy; 2021-2023. <a href="https://alvaromontoro.com" rel="author external">Alvaro Montoro</a>
       &mdash; <a href="/atom.xml">Atom Feed</a>
       &mdash; <a href="/rss.xml">RSS Feed</a>
+      <hr />
+      <nav aria-labelledby="webring" class="full">
+        <h2 id="webring">CSS JOY Webring</h2>
+        <a href="https://webri.ng/webring/cssjoy/previous?via=https://comicss.art">Previous</a>
+        <a href="https://webri.ng/webring/cssjoy/random?via=https://comicss.art">Random</a>
+        <a href="https://webri.ng/webring/cssjoy/next?via=https://comicss.art">Next</a>
+      </nav>
     </footer>
 
     <script src="/js/data.js?last-updated=2023-06-27"></script>
